[metadata]
name = brainways_reg_model
description = Brainways Registration Model
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/bkntr/brainways-reg-model
author = Ben Kantor
author_email = benkantor@mail.tau.ac.il
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bkntr/brainways-reg-model/issues
    Documentation = https://github.com/bkntr/brainways-reg-model#README.md
    Source Code = https://github.com/bkntr/brainways-reg-model
    User Support = https://github.com/bkntr/brainways-reg-model/issues

[options]
packages = find:
install_requires =
    bg-atlasapi
    click
    dacite
    numpy
    kornia
    torch
    torchvision
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brainways-reg-model = brainways_reg_model.cli.cli:cli

[options.extras_require]
dev =
    pre-commit
    %(testing)s
testing =
    pytest
    tox

[options.package_data]
* = *.yaml
